--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
   <meta http-equi="X-UA-Compatible" content="ie=edge"> 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rancho&effect=shadow-multiple" />
-  <link href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+  <script rel="preload" src="https://kit.fontawesome.com/a58fdcacc2.js" crossorigin="anonymous" as="script"></script>
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" as="style" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" />
+  <link rel="preload" href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' as="style">
+  <link rel="stylesheet" href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css'>
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <script src="https://kit.fontawesome.com/a58fdcacc2.js" crossorigin="anonymous"></script>
-	<title>COVID-19 Analytics</title>
+  <title>COVID-19 Analytics</title>
 </head>
 <body>
-
+  <h1>Hello World</h1>
 <script src="js/menu.js"></script>
-<script src="js/lightbox.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
