--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
   <title>COVID-19 Analytics</title>
 </head>
 <body>
+    <div class="banner-support">
+     <div class="banner-support-left> 
+      <a href="#">
+       <img src="img/banner-logo.png" alt="logo" class="banner-logo"/>
+      </a>
+     </div>                                                              
+    <div class="browser-support-icon">
+    <div class="banner-support-right-top>                                
+      <h1>Supported Browsers</h1>
+     </div>
+    <div class="banner-support-right-bot>  
+     <a href="#" title="Supported Broswers: Chrome" class="support-btn"><i class="fa fa-chrome fa-fw" aria-hidden="true"></i></a>
+     <a href="#" title="Supported Broswers: FireFox" class="support-btn"><i class="fa fa-firefox fa-fw" aria-hidden="true"></i></a>
+     <a href="#" title="Supported Broswers: Edge" class="support-btn"><i class="fa fa-edge fa-fw aria-hidden="true"></i></a>
+     <a href="#" title="Supported Broswers: Safari" class="support-btn"><i class="fa fa-safari fa-fw aria-hidden="true"></i></a>  
+    </div>
+   </div>    
+  </div>
   <h1>Hello World</h1>
 <script src="js/menu.js"></script>
 <script src="js/main.js"></script>
