--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </a>
     <div class="browser-support-icon">
      <h1>Supported Browsers</h1>
-      <ul> 
+      <ul class="social-media-list"> 
        <li><a href="#" title="Supported Broswers: Chrome" class="support-btn"><i class="fa fa-chrome fa-fw" aria-hidden="true"></i></a></li>
        <li><a href="#" title="Supported Broswers: FireFox" class="support-btn"><i class="fa fa-firefox fa-fw" aria-hidden="true"></i></a></li>
        <li><a href="#" title="Supported Broswers: Edge" class="support-btn"><i class="fa fa-edge fa-fw aria-hidden="true"></i></a></li>
