--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <title>COVID-19 Analytics</title>
 </head>
 <body>
+   <!-- Browser Support Banner -->
    <div class="banner-support">
     <a href="https://barbariceric.github.io/COVID-19-Analytics/">
      <img src="img/banner-logo.png" alt="logo" class="banner-logo"/>
@@ -27,7 +28,18 @@
       </ul>  
     </div>
   </div>
+  
+  <!-- Navigation Bar -->
+  <div class="wrapper">
+  <nav class="main-nav">
+   <ul>
+    <li><a href="#">USA</a></li>
+    <li><a href="#">GLOBAL</a></li>
+   </ul>
+  </nav>
+    
   <h1>Hello World</h1>
+    
 <script src="js/menu.js"></script>
 <script src="js/main.js"></script>
 </body>
