--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
   <meta http-equi="X-UA-Compatible" content="ie=edge"> 
-  <script rel="preload" src="https://kit.fontawesome.com/a58fdcacc2.js" crossorigin="anonymous" as="script"></script>
-  <script rel="preload" src="https://d3js.org/d3.v6.min.js" as="script"></script>
+  <script rel="preconnect" src="https://kit.fontawesome.com/a58fdcacc2.js" crossorigin="anonymous" as="script"></script>
+  <script rel="preconnect" src="https://d3js.org/d3.v6.min.js" as="script"></script>
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" as="style" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" />
   <link rel="preload" href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' as="style">
