--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
   <meta http-equi="X-UA-Compatible" content="ie=edge"> 
   <script rel="preconnect" src="https://kit.fontawesome.com/a58fdcacc2.js" crossorigin="anonymous" as="script"></script>
-  <script rel="preconnect" src="https://d3js.org/d3.v6.min.js" as="script"></script>
+  <script rel="dns-prefetch" src="https://kit.fontawesome.com/a58fdcacc2.js" as="script"></script>
+  <script rel="preconnect" src="https://d3js.org/d3.v6.min.js" as="script" crossorigin></script>
+  <script rel="dns-prefetch" src="https://d3js.org/d3.v6.min.js" as="script"></script>
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" as="style" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" />
   <link rel="preload" href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' as="style">
@@ -79,6 +81,16 @@
    <i class="fas fa-users fa-4x"></i>
    <h3>Support</h3>
    <p>This is where its at</p>
+  </div>
+ </section>
+    
+<!-- Info Section -->
+ <section class="info"
+  <img src="img/pic1.jpg" alt="">
+  <div>
+   <h2>Your awsome</h2>
+   <p>I know</p>
+   <a href="#" class="btn">Learn More</a>
   </div>
  </section>    
     
