--- a/index.html
+++ b/index.html
@@ -94,8 +94,18 @@
   </div>
  </section>    
     
-  <h1>Hello World</h1>
-    
+<!-- Portfolio Section -->
+ <section class="portfolio">
+  <img src="https://source.unsplash.com/random/200x200" alt="Picture 1">
+  <img src="https://source.unsplash.com/random/201x200" alt="Picture 2">
+  <img src="https://source.unsplash.com/random/202x200" alt="Picture 3">
+  <img src="https://source.unsplash.com/random/203x200" alt="Picture 4">
+  <img src="https://source.unsplash.com/random/204x200" alt="Picture 5">
+  <img src="https://source.unsplash.com/random/205x200" alt="Picture 6">
+  <img src="https://source.unsplash.com/random/206x200" alt="Picture 7">
+  <img src="https://source.unsplash.com/random/207x200" alt="Picture 8">  
+ </section>
+  
 <script src="js/menu.js" async></script>
 <script src="js/main.js" async></script>
 </body>
