--- a/index.html
+++ b/index.html
@@ -103,8 +103,19 @@
   <img src="https://source.unsplash.com/random/204x200" alt="Picture 5">
   <img src="https://source.unsplash.com/random/205x200" alt="Picture 6">
   <img src="https://source.unsplash.com/random/206x200" alt="Picture 7">
-  <img src="https://source.unsplash.com/random/207x200" alt="Picture 8">  
+  <img src="https://source.unsplash.com/random/207x200" alt="Picture 8">
+  <img src="https://source.unsplash.com/random/208x200" alt="Picture 9">
+  <img src="https://source.unsplash.com/random/209x200" alt="Picture 10">
+  <img src="https://source.unsplash.com/random/210x200" alt="Picture 11"> 
  </section>
+  
+<!-- Footer -->
+ <footer>
+  <p>ENDesign &copy; 2020</p>
+ </footer>
+
+ </div>
+<!-- Wrapper End -->  
   
 <script src="js/menu.js" async></script>
 <script src="js/main.js" async></script>
