--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
-  <meta http-equi="X-UA-Compatible" content="ie=edge"> 
+  <meta http-equi="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="COVID19 Analytics">
+  <meta name="author" content="ENDesign – COVID19 Analytics">
+  <meta name="keywords" content="endesign, covid19, data, covid19 data, covid19 visualization">
   <script rel="preconnect" src="https://kit.fontawesome.com/a58fdcacc2.js" crossorigin="anonymous" as="script"></script>
   <script rel="dns-prefetch" src="https://kit.fontawesome.com/a58fdcacc2.js" as="script"></script>
   <script rel="preconnect" src="https://d3js.org/d3.v6.min.js" as="script" crossorigin></script>
   <script rel="dns-prefetch" src="https://d3js.org/d3.v6.min.js" as="script"></script>
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" as="style" />
+  <link rel="dns-prefetch" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" as="style" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" />
   <link rel="preload" href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' as="style">
   <link rel="stylesheet" href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css'>
@@ -49,12 +53,12 @@
    <a href="#" class="btn">See More</a>
   </header>
   <div class="top-box top-box-a">
-   <h4>Global</h4>
+   <h3>Global</h4>
    <p class="price">Cases</p>
    <a href="" class="btn">See More</a>
   </div>
   <div class="top-box top-box-b">
-   <h4>Local</h4>
+   <h3>Local</h4>
    <p class="price">Death</p>
    <a href="" class="btn">See More</a>
   </div>
@@ -102,12 +106,6 @@
   <img src="https://source.unsplash.com/random/203x200" alt="Picture 4">
   <img src="https://source.unsplash.com/random/204x200" alt="Picture 5">
   <img src="https://source.unsplash.com/random/205x200" alt="Picture 6">
-  <img src="https://source.unsplash.com/random/206x200" alt="Picture 7">
-  <img src="https://source.unsplash.com/random/207x200" alt="Picture 8">
-  <img src="https://source.unsplash.com/random/208x200" alt="Picture 9">
-  <img src="https://source.unsplash.com/random/209x200" alt="Picture 10">
-  <img src="https://source.unsplash.com/random/210x200" alt="Picture 11">
-  <img src="https://source.unsplash.com/random/211x200" alt="Picture 12">  
  </section>
   
 <!-- Footer -->
