--- a/index.html
+++ b/index.html
@@ -107,6 +107,15 @@
   <img src="https://source.unsplash.com/random/204x200" alt="Picture 5">
   <img src="https://source.unsplash.com/random/205x200" alt="Picture 6">
  </section>
+
+<!-- News Section -->  
+  <div class="wrapper">
+  <div class="main-nav">
+   <ul>
+    <li><a href="#">News</a></li>
+    <li><a href="#">Research Articles</a></li> 
+   </ul>
+  </div>
   
 <!-- Footer -->
  <footer>
