--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     
 <!-- Info Section -->
  <section class="info"
-  <img src="img/pic1.jpg" alt="">
+  <img src="img/bg.jpg" alt="placeholder">
   <div>
    <h2>Your awsome</h2>
    <p>I know</p>
