--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
  </section>
     
 <!-- Info Section -->
- <section class="info"
+ <section class="info">
   <img src="img/bg.jpg" alt="placeholder">
   <div>
    <h2>Your awsome</h2>
@@ -118,7 +118,7 @@
   </div>
   
 <!-- Footer -->
- <footer>
+ <footer class="footer">
   <p>ENDesign &copy; 2020</p>
  </footer>
 
