--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
     
 <!-- Portfolio Section -->
  <section class="portfolio">
+  <div class="info-title">
+    <p>Infographics</p>
+  </div> 
   <img src="https://source.unsplash.com/random/200x200" alt="Picture 1">
   <img src="https://source.unsplash.com/random/201x200" alt="Picture 2">
   <img src="https://source.unsplash.com/random/202x200" alt="Picture 3">
