--- a/index.html
+++ b/index.html
@@ -96,13 +96,16 @@
    <p>I know</p>
    <a href="#" class="btn">Learn More</a>
   </div>
- </section>    
+ </section>
     
-<!-- Portfolio Section -->
- <section class="portfolio">
+<section>
   <div class="info-title">
     <p>Infographics</p>
   </div> 
+</section>    
+    
+<!-- Portfolio Section -->
+ <section class="portfolio">
   <img src="https://source.unsplash.com/random/200x200" alt="Picture 1">
   <img src="https://source.unsplash.com/random/201x200" alt="Picture 2">
   <img src="https://source.unsplash.com/random/202x200" alt="Picture 3">
