--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
   <img src="img/bg.jpg" alt="placeholder">
   <div>
    <h2>Your awsome</h2>
-   <p>I know</p>
+   <p class="price">I know</p>
    <a href="#" class="btn">Learn More</a>
   </div>
  </section>
     
 <section>
   <div class="info-title">
-    <p>Infographics</p>
+    <p>COVID-19 Infographics</p>
   </div> 
 </section>    
     
