--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
  <section class="boxes">
   <div class="box">
    <i class="fas fa-chart-pie fa-4x"></i>
-   <h3>Data</h3>
+   <h3>Tabular Data</h3>
    <p>This is where its at</p>
   </div>
   <div class="box">
@@ -83,7 +83,7 @@
   </div>
   <div class="box">
    <i class="fas fa-users fa-4x"></i>
-   <h3>Support</h3>
+   <h3>Geographic Map</h3>
    <p>This is where its at</p>
   </div>
  </section>
