--- a/index.html
+++ b/index.html
@@ -67,22 +67,17 @@
 <!-- Box Section -->
  <section class="boxes">
   <div class="box">
-   <i class="fas fa-chart-pie fa-4x"></i>
+   <i class="fas fa-users fa-4x"></i>
    <h3>Tabular Data</h3>
    <p>This is where its at</p>
   </div>
   <div class="box">
+   <i class="fas fa-chart-pie fa-4x"></i>
+   <h3>Tables and Charts</h3>
+   <p>This is where its at</p>
+  </div>
+  <div class="box">
    <i class="fas fa-globe fa-4x"></i>
-   <h3>Tables</h3>
-   <p>This is where its at</p>
-  </div>
-  <div class="box">
-   <i class="fas fa-cog fa-4x"></i>
-   <h3>Charts</h3>
-   <p>This is where its at</p>
-  </div>
-  <div class="box">
-   <i class="fas fa-users fa-4x"></i>
    <h3>Geographic Map</h3>
    <p>This is where its at</p>
   </div>
