--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <meta name="description" content="COVID19 Analytics">
   <meta name="author" content="ENDesign – COVID19 Analytics">
   <meta name="keywords" content="endesign, covid19, data, covid19 data, covid19 visualization">
-  <script rel="preconnect" src="https://kit.fontawesome.com/a58fdcacc2.js" crossorigin="anonymous" as="script"></script>
+  <script rel="preload" src="https://kit.fontawesome.com/a58fdcacc2.js" crossorigin="anonymous" as="script"></script>
   <script rel="dns-prefetch" src="https://kit.fontawesome.com/a58fdcacc2.js" as="script"></script>
   <script rel="preconnect" src="https://d3js.org/d3.v6.min.js" as="script" crossorigin></script>
   <script rel="dns-prefetch" src="https://d3js.org/d3.v6.min.js" as="script"></script>
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" as="style" />
-  <link rel="dns-prefetch" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" as="style" />
+  <!-- <link rel="dns-prefetch" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" as="style" /> -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" />
-  <link rel="preload" href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' as="style">
+  <link rel="dns-prefetch" href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' as="style">
   <link rel="stylesheet" href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css'>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <title>COVID-19 Analytics</title>
@@ -116,6 +116,14 @@
     <li><a href="#">News</a></li>
     <li><a href="#">Research Articles</a></li> 
    </ul>
+    <div class="news-box news-box-a">
+     <h3>Article Name</h4>
+     <p class="price">Summary</p>
+     <a href="" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/bg.jpg" alt="placeholder">
+    </div> 
   </div>
   
 <!-- Footer -->
@@ -126,7 +134,7 @@
  </div>
 <!-- Wrapper End -->  
   
-<script src="js/menu.js" async></script>
-<script src="js/main.js" async></script>
+<script defer src="js/menu.js"></script>
+<script defer src="js/main.js"></script>
 </body>
 </html>
