--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <li><a href="#">News</a></li>
     <li><a href="#">Research Articles</a></li> 
    </ul>
-    <div class="article-container>
+    <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Article Name</h4>
      <p class="price">Summary</p>
