--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
   <!-- Top Container -->
  <section class="top-container">
   <header class="showcase">
-   <h1>Welcome</h1>
-   <p>COVID Anyaltics</p>
-   <a href="#" class="btn">See More</a>
+   <h1>COVID-19 Analytics </h1>
+   <p>Welcome</p>
+   <a href="https://www.cdc.gov/coronavirus/2019-ncov/index.html" class="btn">See More about COVID-19</a>
   </header>
   <div class="top-box top-box-a">
    <h3>Location: Global or USA</h4>
@@ -69,7 +69,7 @@
   <div class="box">
    <i class="fas fa-users fa-4x"></i>
    <h3>Tabular Data</h3>
-   <p>Data Analytics</p>
+   <p>Raw Data Analytics</p>
   </div>
   <div class="box">
    <i class="fas fa-chart-pie fa-4x"></i>
@@ -79,7 +79,7 @@
   <div class="box">
    <i class="fas fa-globe fa-4x"></i>
    <h3>Geographic Map</h3>
-   <p>Cases by Geographic territory</p>
+   <p>Cases by Geographic Territories</p>
   </div>
  </section>
     
@@ -114,7 +114,7 @@
   <div class="main-nav">
    <ul>
     <li><a href="#">News</a></li>
-    <li><a href="#">Research Articles</a></li> 
+    <li><a href="#">Research References</a></li> 
    </ul>
     <div class="article-container">
     <div class="news-box news-box-a">
