--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Article Name</h4>
-     <p class="price">Summary</p>
+     <p class="price">Summary/Abstractof article. This is a test to determine where the text goes. I think this is a great way to iterate on testing/debugging GUI.</p>
      <a href="" class="btn">Link to Article</a>
     </div>
     <div class="news-box news-box-b">
@@ -135,7 +135,7 @@
   <p>ENDesign &copy; 2020</p>
 </footer>
                        
-<script defer src="js/menu.js"></script>
 <script defer src="js/main.js"></script>
+<script async src="js/dataviz.js"></script>    
 </body>
 </html>
