--- a/index.html
+++ b/index.html
@@ -125,7 +125,28 @@
     <div class="news-box news-box-b">
      <img src="img/bg.jpg" alt="placeholder">
     </div>
-   </div>                                         
+   </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Article Name</h4>
+     <p class="price">Summary/Abstractof article. This is a test to determine where the text goes. I think this is a great way to iterate on testing/debugging GUI.</p>
+     <a href="" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/bg.jpg" alt="placeholder">
+    </div>
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Article Name</h4>
+     <p class="price">Summary/Abstractof article. This is a test to determine where the text goes. I think this is a great way to iterate on testing/debugging GUI.</p>
+     <a href="" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/bg.jpg" alt="placeholder">
+    </div>
+   </div>         
+    
   </div>
  </div>
 <!-- Wrapper End -->  
