--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
     <div class="swiper-button-next swiper-button-white"></div>
     <div class="swiper-button-prev swiper-button-white"></div>
   </div> 
-  <img src="CDC Poster_stop-the-spread-of-germs_English-page-001.jpg" alt="COVID Spreading Germs English Infographic"> 
+  <!-- <img src="CDC Poster_stop-the-spread-of-germs_English-page-001.jpg" alt="COVID Spreading Germs English Infographic"> 
   <img src="https://source.unsplash.com/random/200x200" alt="Picture 1">
   <img src="https://source.unsplash.com/random/201x200" alt="Picture 2">
   <img src="https://source.unsplash.com/random/202x200" alt="Picture 3">
   <img src="https://source.unsplash.com/random/203x200" alt="Picture 4">
   <img src="https://source.unsplash.com/random/204x200" alt="Picture 5">
-  <img src="https://source.unsplash.com/random/205x200" alt="Picture 6">
+  <img src="https://source.unsplash.com/random/205x200" alt="Picture 6"> -->
  </section>
 
 <!-- News Section -->  
