--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="swiper-wrapper">
       <div class="swiper-slide">
         <!-- Required swiper-lazy class and image source specified in data-src attribute -->
-        <img data-src="CDC Poster_stop-the-spread-of-germs_English-page-001.jpg" alt="COVID Spreading Germs English Infographic" class="swiper-lazy">
+        <img data-src="img/CDC Poster_stop-the-spread-of-germs_English-page-001.jpg" alt="COVID Spreading Germs English Infographic" class="swiper-lazy">
         <!-- Preloader image -->
         <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
       </div>
