--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" as="style" />
   <!-- <link rel="dns-prefetch" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" as="style" /> -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" />
-  <link rel="dns-prefetch" href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' as="style">
-  <link rel="stylesheet" href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css'>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="preload" href="https://unpkg.com/swiper/swiper-bundle.min.css" as="style">
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+  <link rel="dns-prefetch" href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' as="style" />
+  <link rel="stylesheet" href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' />
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="preload" href="https://unpkg.com/swiper/swiper-bundle.min.css" as="style" />
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <title>COVID-19 Analytics</title>
 </head>
 <body>
