--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
     
 <!-- Portfolio Section -->
  <section class="portfolio">
+  <div class="infographic-demo"> 
     <!-- Swiper -->
   <div class="swiper-container">
     <div class="swiper-wrapper">
@@ -147,6 +148,7 @@
   <img src="https://source.unsplash.com/random/203x200" alt="Picture 4">
   <img src="https://source.unsplash.com/random/204x200" alt="Picture 5">
   <img src="https://source.unsplash.com/random/205x200" alt="Picture 6"> -->
+   </div>  
  </section>
 
 <!-- News Section -->  
