--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
  </section>
 
 <!-- News Section -->  
-  <div class="wrapper">
+  <div class="wrapper news-wrapper">
   <div class="main-nav">
    <ul>
     <li><a href="#">News</a></li>
@@ -185,7 +185,27 @@
     <div class="news-box news-box-b">
      <img src="img/bg.jpg" alt="placeholder">
     </div>
-   </div>         
+   </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Article Name</h4>
+     <p class="price">Summary/Abstractof article. This is a test to determine where the text goes. I think this is a great way to iterate on testing/debugging GUI.</p>
+     <a href="" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/bg.jpg" alt="placeholder">
+    </div>
+   </div>  
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Article Name</h4>
+     <p class="price">Summary/Abstractof article. This is a test to determine where the text goes. I think this is a great way to iterate on testing/debugging GUI.</p>
+     <a href="" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/bg.jpg" alt="placeholder">
+    </div>
+   </div>      
     
   </div>
  </div>
