--- a/index.html
+++ b/index.html
@@ -150,12 +150,14 @@
  </section>
 
 <!-- News Section -->  
-  <div class="wrapper news-wrapper">
+<section id="news">    
+  <div class="wrapper">
   <div class="main-nav">
    <ul>
     <li><a href="#">News</a></li>
     <li><a href="#">Research References</a></li> 
    </ul>
+   
     <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Article Name</h4>
@@ -209,6 +211,7 @@
     
   </div>
  </div>
+</section>  
 <!-- Wrapper End -->  
                                             
 <!-- Footer -->
