--- a/index.html
+++ b/index.html
@@ -113,23 +113,23 @@
         <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
       </div>
       <div class="swiper-slide">
-        <img data-src="https://source.unsplash.com/random/200x200" alt="Picture 1" class="swiper-lazy">
+        <img data-src="https://source.unsplash.com/random/200x200" alt="Picture 1" class="swiper-img swiper-lazy">
         <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
       </div>
       <div class="swiper-slide">
-        <img data-src="https://source.unsplash.com/random/201x200" alt="Picture 2" class="swiper-lazy">
+        <img data-src="https://source.unsplash.com/random/201x200" alt="Picture 2" class="swiper-img swiper-lazy">
         <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
       </div>
       <div class="swiper-slide">
-        <img data-src="https://source.unsplash.com/random/202x200" alt="Picture 3" class="swiper-lazy">
+        <img data-src="https://source.unsplash.com/random/202x200" alt="Picture 3" class="swiper-img swiper-lazy">
         <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
       </div>
       <div class="swiper-slide">
-        <img data-src="https://source.unsplash.com/random/203x200" alt="Picture 4" class="swiper-lazy">
+        <img data-src="https://source.unsplash.com/random/203x200" alt="Picture 4" class="swiper-img swiper-lazy">
         <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
       </div>
       <div class="swiper-slide">
-        <img data-src="https://source.unsplash.com/random/204x200" alt="Picture 5" class="swiper-lazy">
+        <img data-src="https://source.unsplash.com/random/204x200" alt="Picture 5" class="swiper-img swiper-lazy">
         <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
       </div>
 
