--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <!-- Portfolio Section -->
  <section class="portfolio">
     <!-- Swiper -->
-  <div class="swiper-container">
+  <div class="swiper-container swiper-infograph">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
         <!-- Required swiper-lazy class and image source specified in data-src attribute -->
