--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   <div class="wrapper">
   <nav class="main-nav">
    <ul>
-    <li><a href="#">USA</a></li>
-    <li><a href="#">GLOBAL</a></li>
+    <li><a href="#">USA DATA</a></li>
+    <li><a href="#">GLOBAL DATA</a></li>
    </ul>
   </nav>
     
@@ -71,7 +71,7 @@
   <div class="box">
    <i class="fas fa-users fa-4x"></i>
    <h3>Tabular Data</h3>
-   <p>Raw Data Analytics</p>
+   <p>Raw Data</p>
   </div>
   <div class="box">
    <i class="fas fa-chart-pie fa-4x"></i>
@@ -156,10 +156,9 @@
  <div class="swiper-wrapper">
   <div class="swiper-slide">     
  <div class="wrapper">
-  <div class="main-nav">
+  <div class="main-nav single-block">
    <ul>
     <li><a href="#">News</a></li>
-    <li><a href="#">Research References</a></li> 
    </ul>
     <div class="article-container">
     <div class="news-box news-box-a">
