--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
  <div class="swiper-wrapper">
   <div class="swiper-slide">     
  <div class="wrapper">
-  <div class="main-nav single-block">
-   <ul>
+  <div class="main-nav">
+   <ul class="single-block">
     <li><a href="#">News</a></li>
    </ul>
     <div class="article-container">
