--- a/index.html
+++ b/index.html
@@ -351,17 +351,6 @@
    </div>
 <div class="article-container">
     <div class="news-box news-box-a">
-     <h3>Gov. Sisolak urges Nevadans to stay home for two weeks as cases skyrocket</h4>
-     <p class="price">Summary/Abstract of article. This is a test to determine where the text goes. I think this is a great way to iterate on testing/debugging GUI.</p>
-     <p class="price">Source: News3lv, Published from November 10, 2020</p>
-     <a href="https://news3lv.com/news/local/today-at-6-pm-gov-sisolak-to-host-update-with-renown-ceo" class="btn">Link to Article</a>
-    </div>
-    <div class="news-box news-box-b">
-     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
-    </div>
-   </div>    
-<div class="article-container">
-    <div class="news-box news-box-a">
      <h3>Covid Deaths in England and Wales Reach Highest Since Early June</h4>
      <p class="price">Summary/Abstract of article. This is a test to determine where the text goes. I think this is a great way to iterate on testing/debugging GUI.</p>
      <p class="price">Source: BloomBerg (Paywall), Published on November 10, 2020, 1:44 AM PST</p>
@@ -484,17 +473,6 @@
    </div>    
    <div class="article-container">
     <div class="news-box news-box-a">
-     <h3>Hospitalizations soar in California as COVID-19 pandemic surges</h4>
-     <p class="price">Summary/Abstract of article. This is a test to determine where the text goes. I think this is a great way to iterate on testing/debugging GUI.</p>
-     <p class="price">Source: Reuters on November 10, 2020 at 12:26 PM</p>
-     <a href="https://www.reuters.com/article/us-health-coronavirus-california-idUSKBN27Q365" class="btn">Link to Article</a> 
-    </div>
-    <div class="news-box news-box-b">
-     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
-    </div>
-   </div>
-   <div class="article-container">
-    <div class="news-box news-box-a">
      <h3>In Just 24 Hours, The US Has Recorded over 200,000 New COVID-19 Cases</h4>
      <p class="price">Summary/Abstract of article. This is a test to determine where the text goes. I think this is a great way to iterate on testing/debugging GUI.</p>
      <p class="price">Source: ScienceAlert on November 11, 2020</p>
@@ -503,7 +481,18 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>       
+   </div>
+   <div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>South Korea: New virus cases at nearly 3-week high; more regions upping virus curbs amid resurgence</h4>
+     <p class="price">Summary/Abstract of article. This is a test to determine where the text goes. I think this is a great way to iterate on testing/debugging GUI.</p>
+     <p class="price">Source: Yonhap News Agency on November 11, 2020 at 14:23</p>
+     <a href="https://en.yna.co.kr/view/AEN20201111001853320" class="btn">Link to Article</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
     
   </div>
  </div>
