--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
    <a href="https://www.cdc.gov/coronavirus/2019-ncov/index.html" class="btn">See More about COVID-19</a>
   </header>
   <div class="top-box top-box-a">
-   <h3>USA:Cases</h4>
-   <p class="price">Number of Cases</p>
+   <h3>USA Cases</h4>
+   <p class="price us-case-confirmed">Number of Cases</p>
    <a href="" class="btn">See More</a>
   </div>
   <div class="top-box top-box-b">
-   <h3>USA:Deaths</h4>
-   <p class="price">Number of Death</p>
+   <h3>USA Deaths</h4>
+   <p class="price us-case-death">Number of Death</p>
    <a href="" class="btn">See More</a>
   </div>
  </section>
@@ -94,6 +94,65 @@
    <h2 class="us-case-death"></h2>
    <h2 class="us-case-confirmed"></h2> 
    <a href="#" class="btn">Learn More</a>
+      <table class="table">
+    <thead>
+     <tr>
+      <th></th> 
+      <th>Basic</th>
+      <th>Standard</th>
+      <th>Premium</th>
+     </tr> 
+    </thead>
+    <tbody> 
+     <tr>
+      <td>Monthly price after free moneth ends on 6/19/2020</td>
+      <td>$8.99</td>
+      <td>$12.99</td>
+      <td>$15.99</td>
+     </tr>
+     <tr>
+      <td>HD Available</td>
+      <td><i class="fas fa-times"></i></td>
+      <td><i class="fas fa-check"></i></td>
+      <td><i class="fas fa-check"></i></td>
+     </tr>
+     <tr>
+      <td>Ultra HD Available</td>
+      <td><i class="fas fa-times"></i></td>
+      <td><i class="fas fa-check"></i></td>
+      <td><i class="fas fa-check"></i></td>
+     </tr>
+     <tr>
+      <td>Screens You Can Watch</td>
+      <td>1</td>
+      <td>2</td>
+      <td>4</td>
+     </tr>
+     <tr>
+      <td>Watch on your TV, phone, and tablet</td>
+      <td><i class="fas fa-check"></i></td>
+      <td><i class="fas fa-check"></i></td>
+      <td><i class="fas fa-check"></i></td>
+     </tr>
+     <tr>
+      <td>Unlimited movies and TV shows</td>
+      <td><i class="fas fa-check"></i></td>
+      <td><i class="fas fa-check"></i></td>
+      <td><i class="fas fa-check"></i></td>
+     </tr>
+     <tr>
+      <td>Cancel Anytime</td>
+      <td><i class="fas fa-check"></i></td>
+      <td><i class="fas fa-check"></i></td>
+      <td><i class="fas fa-check"></i></td>
+     </tr>
+     <tr>
+      <td>First Month Free</td>
+      <td><i class="fas fa-check"></i></td>
+      <td><i class="fas fa-check"></i></td>
+      <td><i class="fas fa-check"></i></td>
+     </tr>
+    </tbody>
   </div>
  </section>
     
@@ -115,11 +174,11 @@
         <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
       </div>
       <div class="swiper-slide">
-        <img data-src="https://source.unsplash.com/random/200x200" alt="Picture 1" class="swiper-img swiper-lazy">
+        <img data-src="img/CDC Poster_stop-the-spread-of-germs_Spanish-page-001.jpg" alt="Picture 1" class="swiper-img swiper-lazy">
         <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
       </div>
       <div class="swiper-slide">
-        <img data-src="https://source.unsplash.com/random/201x200" alt="Picture 2" class="swiper-img swiper-lazy">
+        <img data-src="img/CDC Poster_stop-the-spread-of-germs_Chinese-page-001.jpg" alt="Picture 2" class="swiper-img swiper-lazy">
         <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
       </div>
       <div class="swiper-slide">
@@ -128,10 +187,6 @@
       </div>
       <div class="swiper-slide">
         <img data-src="https://source.unsplash.com/random/203x200" alt="Picture 4" class="swiper-img swiper-lazy">
-        <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
-      </div>
-      <div class="swiper-slide">
-        <img data-src="https://source.unsplash.com/random/204x200" alt="Picture 5" class="swiper-img swiper-lazy">
         <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
       </div>
 
@@ -162,6 +217,17 @@
    <ul class="single-block">
     <li><a href="#">News and Articles</a></li>
    </ul>
+    <div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>COVID-19 now No. 3 cause of death in US</h3>
+     <p class="price">Summary/Abstract of article. This is a test to determine where the text goes. I think this is a great way to iterate on testing/debugging GUI.</p>
+     <p class="price">Source: The Hill on August 17, 2020</p>
+     <a href="https://thehill.com/policy/healthcare/512427-covid-19-now-no-3-cause-of-death-in-us" class="btn">Link to Study</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
     <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Aerosol Filtration Efficiency of Common Fabrics Used in Respiratory Cloth Masks</h3>
