--- a/index.html
+++ b/index.html
@@ -87,22 +87,89 @@
     
 <!-- Info Section -->
  <section class="info">
-  <img src="img/bg.jpg" alt="placeholder">
-  <div>
-   <h2>You're awsome</h2>
+  <div class="info-title">
+   <h2>United States</h2>
    <p class="price">I know</p>
-   <h2 class="us-case-death"></h2>
-   <h2 class="us-case-confirmed"></h2> 
    <a href="#" class="btn">Learn More</a>
   </div>
+  <div class="FilterRow">
+    <input id="searchBar" placeholder="Search for Country" class="searchBar">
+    <select id="sourceSel" class="sourceSel">
+      <option value="John Hopkins University" selected="selected">John Hopkins University</option>
+      <option value="COVID Tracking Project">COVID Tracking Project</option>
+      <option value="New York Times">New York Times</option>
+     </select>
+   </div> 
   <div> 
    <table class="table">
     <thead>
      <tr>
-      <th></th> 
-      <th>Basic</th>
-      <th>Standard</th>
-      <th>Premium</th>
+      <th>States</th> 
+      <th>New York</th>
+      <th>California</th>
+      <th>Washington</th>
+     </tr> 
+    </thead>
+    <tbody> 
+     <tr>
+      <td>Price</td>
+      <td>$8.99</td>
+      <td>$12.99</td>
+      <td>$15.99</td>
+     </tr>
+     <tr>
+      <td>Available</td>
+      <td><i class="fas fa-times"></i></td>
+      <td><i class="fas fa-check"></i></td>
+      <td><i class="fas fa-check"></i></td>
+     </tr>
+     <tr>
+      <td>Available</td>
+      <td><i class="fas fa-times"></i></td>
+      <td><i class="fas fa-check"></i></td>
+      <td><i class="fas fa-check"></i></td>
+     </tr>
+     <tr>
+      <td>Count</td>
+      <td>1</td>
+      <td>2</td>
+      <td>4</td>
+     </tr>
+     <tr>
+      <td>Death</td>
+      <td><i class="fas fa-check"></i></td>
+      <td><i class="fas fa-check"></i></td>
+      <td><i class="fas fa-check"></i></td>
+     </tr>
+     <tr>
+      <td>Critical</td>
+      <td><i class="fas fa-check"></i></td>
+      <td><i class="fas fa-check"></i></td>
+      <td><i class="fas fa-check"></i></td>
+     </tr>
+     <tr>
+      <td>Hospilization</td>
+      <td><i class="fas fa-check"></i></td>
+      <td><i class="fas fa-check"></i></td>
+      <td><i class="fas fa-check"></i></td>
+     </tr>
+     <tr>
+      <td>Projection</td>
+      <td><i class="fas fa-check"></i></td>
+      <td><i class="fas fa-check"></i></td>
+      <td><i class="fas fa-check"></i></td>
+     </tr>
+    </tbody>
+   </table>  
+  </div>
+   <div> 
+   <table class="table">
+    <thead>
+     <tr>
+      <th>Source</th> 
+      <th>John Hopkins University</th>
+      <th>COVID Tracking Project</th>
+      <th>New York Times</th>
      </tr> 
     </thead>
     <tbody> 
@@ -177,19 +244,11 @@
         <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
       </div>
       <div class="swiper-slide">
-        <img data-src="img/CDC Poster_stop-the-spread-of-germs_Spanish-page-001.jpg" alt="Picture 1" class="swiper-img swiper-lazy">
+        <img data-src="img/CDC Poster_stop-the-spread-of-germs_Spanish-page-001.jpg" alt="COVID Spreading Germs Spanish Infographic" class="swiper-img swiper-lazy">
         <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
       </div>
       <div class="swiper-slide">
-        <img data-src="img/CDC Poster_stop-the-spread-of-germs_Chinese-page-001.jpg" alt="Picture 2" class="swiper-img swiper-lazy">
-        <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
-      </div>
-      <div class="swiper-slide">
-        <img data-src="https://source.unsplash.com/random/202x200" alt="Picture 3" class="swiper-img swiper-lazy">
-        <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
-      </div>
-      <div class="swiper-slide">
-        <img data-src="https://source.unsplash.com/random/203x200" alt="Picture 4" class="swiper-img swiper-lazy">
+        <img data-src="img/CDC Poster_stop-the-spread-of-germs_Chinese-page-001.jpg" alt="COVID Spreading Germs Chinese Infographic" class="swiper-img swiper-lazy">
         <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
       </div>
 
