--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <thead>
      <tr>
       <th>States</th> 
-      <th>Confirm Cases</th>
+      <th>Cases</th>
       <th>Deaths</th>
      </tr> 
     </thead>
@@ -113,7 +113,7 @@
      <tr>
       <td class="">New York</td>
       <td class="">$8.99</td>
-      <tdclass="">$12.99</td>
+      <td class="">$12.99</td>
      </tr>
      <tr>
       <td>California</td>
@@ -153,7 +153,7 @@
     <thead>
      <tr>
       <th>States</th> 
-      <th>Confirmed Cases</th>
+      <th>Cases</th>
       <th>Deaths</th>
      </tr> 
     </thead>
@@ -235,6 +235,7 @@
     <div class="news-box news-box-a">
      <h3>COVID-19 now No. 3 cause of death in US</h3>
      <p class="price">Source: The Hill on August 17, 2020</p>
+     <a href="javascript:void(0)" class="alert-btn"><i class="fas fa-exclamation fa-fw" aria-hidden="true"></i>Interesting Read</a>
      <a href="https://thehill.com/policy/healthcare/512427-covid-19-now-no-3-cause-of-death-in-us" class="btn">Link to Study</a> 
     </div>
     <div class="news-box news-box-b">
@@ -1160,7 +1161,7 @@
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>    
 <script defer src="js/main.js"></script>
 <script async src="js/dataviz.js"></script>
-<script async src="js/swiperaction.js"></script>
+<script defer src="js/swiperaction.js"></script>
 <script async src="js/datacollection.js"></script>
 </body>
 </html>
