--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     <div class="news-box news-box-a">
      <h3>COVID-19 now No. 3 cause of death in US</h3>
      <p class="price">Source: The Hill on August 17, 2020</p>
-     <a href="javascript:void(0)" class="alert-btn"><i class="fas fa-exclamation fa-fw" aria-hidden="true"></i>Interesting Read</a>
+     <a href="javascript:void(0)" class="alert-btn"><i class="fas fa-exclamation-triangle fa-fw" aria-hidden="true"></i>Interesting Read</a>
      <a href="https://thehill.com/policy/healthcare/512427-covid-19-now-no-3-cause-of-death-in-us" class="btn">Link to Study</a> 
     </div>
     <div class="news-box news-box-b">
