--- a/index.html
+++ b/index.html
@@ -57,11 +57,13 @@
   <div class="top-box top-box-a">
    <h3>USA Cases</h4>
    <p class="price us-case-confirmed">Number of Cases</p>
+   <p class="price us-case-date"></p> 
    <a href="" class="btn">See More</a>
   </div>
   <div class="top-box top-box-b">
    <h3>USA Deaths</h4>
    <p class="price us-case-death">Number of Death</p>
+   <p class="price us-case-date"></p> 
    <a href="" class="btn">See More</a>
   </div>
  </section>
@@ -159,7 +161,27 @@
     </thead>
     <tbody> 
      <tr>
-      <td>New York</td>
+      <td>Alabama</td>
+      <td>$8.99</td>
+      <td>$12.99</td>
+     </tr>
+     <tr>
+      <td>Alaska</td>
+      <td>$8.99</td>
+      <td>$12.99</td>
+     </tr>
+     <tr>
+      <td>American Samoa</td>
+      <td>$8.99</td>
+      <td>$12.99</td>
+     </tr>
+     <tr>
+      <td>Arizona</td>
+      <td>$8.99</td>
+      <td>$12.99</td>
+     </tr>
+     <tr>
+      <td>Arkansas</td>
       <td>$8.99</td>
       <td>$12.99</td>
      </tr>
@@ -167,6 +189,11 @@
       <td>California</td>
       <td><i class="fas fa-times"></i></td>
       <td><i class="fas fa-check"></i></td>
+     </tr>
+     <tr>
+      <td>New York</td>
+      <td>$8.99</td>
+      <td>$12.99</td>
      </tr>
      <tr>
       <td>Washington</td>
