--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <link rel="preload" href="https://unpkg.com/swiper/swiper-bundle.min.css" as="style" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+  <link rel="prefetch" href="globalcases.html">
   <title>COVID-19 Analytics</title>
 </head>
 <body>
@@ -42,8 +43,8 @@
   <div class="wrapper">
   <nav class="main-nav">
    <ul>
-    <li><a href="#">USA DATA</a></li>
-    <li><a href="#">GLOBAL DATA</a></li>
+    <li><a href="https://barbariceric.github.io/COVID-19-Analytics/">USA DATA</a></li>
+    <li><a href="globalcases.html">GLOBAL DATA</a></li>
    </ul>
   </nav>
     
@@ -57,14 +58,16 @@
   <div class="top-box top-box-a">
    <h3>USA Cases</h4>
    <p class="price us-case-confirmed">Number of Cases</p>
-   <p class="price us-case-date"></p> 
-   <a href="" class="btn">See More</a>
+   <p class="price us-case-date-top"></p> 
+   <a href="https://coronavirus.jhu.edu/" class="btn">See More</a>
+   <a href="https://github.com/CSSEGISandData/COVID-19" class="btn">Data Source</a> 
   </div>
   <div class="top-box top-box-b">
    <h3>USA Deaths</h4>
    <p class="price us-case-death">Number of Death</p>
-   <p class="price us-case-date"></p> 
-   <a href="" class="btn">See More</a>
+   <p class="price us-case-date-bot"></p> 
+   <a href="https://coronavirus.jhu.edu/" class="btn">See More</a>
+   <a href="https://github.com/CSSEGISandData/COVID-19" class="btn">Data Source</a> 
   </div>
  </section>
     
