--- a/globalcases.html
+++ b/globalcases.html
@@ -58,14 +58,16 @@
   <div class="top-box top-box-a">
    <h3>USA Cases</h4>
    <p class="price us-case-confirmed">Number of Cases</p>
-   <p class="price us-case-date-top"></p> 
+   <p class="price us-case-date-top"></p>
+   <p class="price us-testing"></p>  
    <a href="https://coronavirus.jhu.edu/" class="btn">See More</a>
    <a href="https://github.com/CSSEGISandData/COVID-19" class="btn">Data Source</a> 
   </div>
   <div class="top-box top-box-b">
    <h3>USA Deaths</h4>
    <p class="price us-case-death">Number of Death</p>
-   <p class="price us-case-date-bot"></p> 
+   <p class="price us-case-date-bot"></p>
+   <p class="price us-testing"></p>  
    <a href="https://coronavirus.jhu.edu/" class="btn">See More</a>
    <a href="https://github.com/CSSEGISandData/COVID-19" class="btn">Data Source</a> 
   </div>
@@ -89,6 +91,7 @@
 <script defer src="js/main.js"></script>
 <script async src="js/dataviz.js"></script>
 <script defer src="js/swiperaction.js"></script>
-<script async src="js/datacollection.js"></script>    
+<script async src="js/datacollection.js"></script>
+<script async src="js/globaldatacollection.js"></script>      
 </body>
 </html>
