--- a/globalcases.html
+++ b/globalcases.html
@@ -91,7 +91,7 @@
 <script defer src="js/main.js"></script>
 <script async src="js/dataviz.js"></script>
 <script defer src="js/swiperaction.js"></script>
-<script async src="js/datacollection.js"></script>
+<!-- <script async src="js/datacollection.js"></script> -->
 <script async src="js/globaldatacollection.js"></script>      
 </body>
 </html>
