--- a/globalcases.html
+++ b/globalcases.html
@@ -56,7 +56,7 @@
    <a href="https://www.cdc.gov/coronavirus/2019-ncov/index.html" class="btn">See More about COVID-19</a>
   </header>
   <div class="top-box top-box-a">
-   <h3>USA Cases</h4>
+   <h3>Global Cases</h4>
    <p class="price us-case-confirmed">Number of Cases</p>
    <p class="price us-case-date-top"></p>
    <p class="price us-testing"></p>  
@@ -64,10 +64,10 @@
    <a href="https://github.com/CSSEGISandData/COVID-19" class="btn">Data Source</a> 
   </div>
   <div class="top-box top-box-b">
-   <h3>USA Deaths</h4>
+   <h3>Global Deaths</h4>
    <p class="price us-case-death">Number of Death</p>
    <p class="price us-case-date-bot"></p>
-   <p class="price us-testing"></p>  
+   <p class="price us-testing-two"></p>  
    <a href="https://coronavirus.jhu.edu/" class="btn">See More</a>
    <a href="https://github.com/CSSEGISandData/COVID-19" class="btn">Data Source</a> 
   </div>
