--- a/index.html
+++ b/index.html
@@ -190,9 +190,19 @@
      </tr>
      <tr>
       <td>California</td>
-      <td><i class="fas fa-times"></i></td>
-      <td><i class="fas fa-check"></i></td>
+      <td "us-covidtrack-ca-confirm"></td>
+      <td "us-covidtrack-ca-death"></i></td>
      </tr>
+     <tr>
+      <td>Idaho</td>
+      <td class="us-covidtrack-id-confirm"></td>
+      <td class="us-covidtrack-id-death"></td>
+     </tr>
+     <tr>
+      <td>Maryland</td>
+      <td "us-covidtrack-md-confirm"></td>
+      <td "us-covidtrack-md-death"></td>
+     </tr>  
      <tr>
       <td>New York</td>
       <td>$8.99</td>
@@ -202,7 +212,7 @@
       <td>Washington</td>
       <td><i class="fas fa-times"></i></td>
       <td><i class="fas fa-check"></i></td>
-     </tr>
+     </tr>   
     </tbody>
    </table>  
   </div>
