--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
      </tr>
      <tr>
       <td>California</td>
-      <td "us-covidtrack-ca-confirm"></td>
-      <td "us-covidtrack-ca-death"></i></td>
+      <td class="us-covidtrack-ca-confirm"></td>
+      <td class="us-covidtrack-ca-death"></i></td>
      </tr>
      <tr>
       <td>Idaho</td>
@@ -200,18 +200,18 @@
      </tr>
      <tr>
       <td>Maryland</td>
-      <td "us-covidtrack-md-confirm"></td>
-      <td "us-covidtrack-md-death"></td>
+      <td class="us-covidtrack-md-confirm"></td>
+      <td class="us-covidtrack-md-death"></td>
      </tr>  
      <tr>
       <td>New York</td>
-      <td>$8.99</td>
-      <td>$12.99</td>
+      <td class="us-covidtrack-ny-confirm"></td>
+      <td class="us-covidtrack-ny-death"></td>
      </tr>
      <tr>
       <td>Washington</td>
-      <td><i class="fas fa-times"></i></td>
-      <td><i class="fas fa-check"></i></td>
+      <td class="us-covidtrack-wa-confirm"></td>
+      <td class="us-covidtrack-wa-death"></td>
      </tr>   
     </tbody>
    </table>  
