--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
      </tr>
      <tr>
       <td>California</td>
-      <td class="us-covidtrack-ca-confirm"></td>
-      <td class="us-covidtrack-ca-death"></i></td>
+      <td><span class="us-covidtrack-ca-confirm"></span></td>
+      <td><span class="us-covidtrack-ca-death"></span></td>
      </tr>
      <tr>
       <td>Idaho</td>
