--- a/index.html
+++ b/index.html
@@ -57,15 +57,13 @@
   </header>
   <div class="top-box top-box-a">
    <h3>USA Cases</h4>
-   <p class="price us-case-confirmed">Number of Cases</p>
-   <p class="price us-case-date-top"></p> 
+   <p class="price us-case-confirmed">Number of Cases</p> 
    <a href="https://coronavirus.jhu.edu/" class="btn">See More</a>
    <a href="https://github.com/CSSEGISandData/COVID-19" class="btn">Data Source</a> 
   </div>
   <div class="top-box top-box-b">
    <h3>USA Deaths</h4>
    <p class="price us-case-death">Number of Death</p>
-   <p class="price us-case-date-bot"></p> 
    <a href="https://coronavirus.jhu.edu/" class="btn">See More</a>
    <a href="https://github.com/CSSEGISandData/COVID-19" class="btn">Data Source</a> 
   </div>
@@ -190,13 +188,13 @@
      </tr>
      <tr>
       <td>California</td>
-      <td id="us-covidtrack-ca-confirm"></td>
-      <td id="us-covidtrack-ca-death"></td>
+      <td id="us-covidtrack-ca-confirm">Loading...</td>
+      <td id="us-covidtrack-ca-death">Loading...</td>
      </tr>
      <tr>
       <td>Idaho</td>
-      <td class="us-covidtrack-id-confirm"></td>
-      <td class="us-covidtrack-id-death"></td>
+      <td class="us-covidtrack-id-confirm">Loading...</td>
+      <td class="us-covidtrack-id-death">Loading...</td>
      </tr>
      <tr>
       <td>Maryland</td>
